Support of constructors in BuiltinObjects